tenzir/integration/data/reference/parser/test_functions/step_02.ref
error: duplicate comma
 --> /dev/stdin:1:9
  |
1 | a = b(c,,)
  |         ^ 
  |